# inferlite

./: .env.example  .gitignore  Dockerfile  Dockerfile.cpu  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  RESULTS.md  __init__.py
benchmarks/configs/: bursty_workload.json  cpu_smoke_workload.json  default_workload.json
benchmarks/scripts/: __init__.py  kv_cache_memory_benchmark.py  load_generator.py  plot_cpu_smoke.py  plot_kv_cache.py  plot_results.py  run_benchmark.py  run_matrix.py
deploy/: prometheus.yml
deploy/grafana/: dashboard.json
deploy/grafana/dashboards/: inferlite.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
docs/: blog-post.md  deployment.md  design.md
src/inferlite/: __init__.py  config.py
src/inferlite/api/: app.py  schemas.py
src/inferlite/auth/: __init__.py  deps.py  models.py  rate_limit.py  store.py
src/inferlite/cache/: __init__.py  contiguous.py  paged.py  types.py
src/inferlite/engine/: __init__.py  model_runner.py  naive_runner.py
src/inferlite/observability/: logging.py  metrics.py
src/inferlite/scheduler/: __init__.py  continuous.py  types.py
tests/: test_auth_and_chat_api.py  test_completions_api.py  test_health.py  test_kv_cache.py  test_metrics_endpoint.py  test_scheduler_continuous.py
