[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferlite"
version = "0.1.0"
description = "Python-first LLM inference server with continuous batching and paged KV cache."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "InferLite Contributors" }]
dependencies = [
  "accelerate>=0.33.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "matplotlib>=3.9.0",
  "prometheus-client>=0.21.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "uvicorn[standard]>=0.30.0",
  "uvloop>=0.20.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inferlite"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=inferlite --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
